--- a/dvs_mapping/CMakeLists.txt
+++ b/dvs_mapping/CMakeLists.txt
@@ -17,19 +17,17 @@ set(HEADERS
   include/dvs_depth_from_defocus/depth_vector.hpp
   include/dvs_depth_from_defocus/dvs_mapping_nodelet.h
 )
-
 set(SOURCES
   src/depth_defocus_node.cpp
 )
-
+# 把HEADERS、SOURCES添加到dvs_mapping库
 cs_add_library(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
+# 编译出可执行的dvs_mapping_ros
 cs_add_executable(dvs_mapping_ros src/dvs_mapping_ros.cpp)
-target_link_libraries(dvs_mapping_ros ${PROJECT_NAME})
-
-
-cs_add_library(dvs_mapping_nodelet src/dvs_mapping_nodelet.cpp)
-target_link_libraries(dvs_mapping_nodelet ${PROJECT_NAME})
+target_link_libraries(dvs_mapping_ros
+  ${PROJECT_NAME}
+)
 
 cs_install()
 cs_export()
